--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>32768</title>
+  <title>46368</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
@@ -16,7 +16,7 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">32768</h1>
+      <h1 class="title">46368</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -24,7 +24,7 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Join the numbers and get to the <strong>32768 tile!</strong></p>
+      <p class="game-intro">Join the numbers and get to the <strong>46368 tile!</strong></p>
       <a class="restart-button">New Game</a>
     </div>
 
@@ -70,15 +70,15 @@
     </div>
 
     <p class="game-explanation">
-      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
+    <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. If two tiles are successive items in <strong>Fibonacci Sequence</strong>, when they touch, <strong>they merge into one!</strong>
     </p>
     <hr>
     <p>
-    <strong class="important">Note:</strong> This site is the official version of 32768. You can play it on your phone via <a href="http://git.io/32768">http://git.io/32768.</a> All other apps or sites are derivatives or fakes, and should be used with caution.
+    <strong class="important">Note:</strong> This site is the official version of 46368.
     </p>
     <hr>
     <p>
-    Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli. Improved by NikEix</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    Created by <a href="https://github.com/Ryan2144" target="_blank">Ryan2144.</a> Based on <a href="https://thereal23.github.io/2584" target="_blank">2584 by TheReal23.</a> Also based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     </p>
   </div>
 
